# chatbot_target_labs

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml
data/datasets/: cubo_sellout_chatbot.parquet
data/mappings/: alias.yaml
src/: __init__.py  pipeline_orchestrator.py
src/analytics_executor/: __init__.py  agent.py  agent_legacy.py
src/analytics_executor/data/: __init__.py  column_validator.py  data_loader.py
src/analytics_executor/execution/: __init__.py  duckdb_engine.py  filter_normalizer.py  (+2 more)
src/auth/: __init__.py  email_validator.py
src/filter_classifier/: __init__.py  agent.py  interactive_mode.py
src/formatter_agent/: PHASE5_IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  agent.py
src/graphic_classifier/: __init__.py  agent.py
src/insight_generator/: __init__.py  agent.py
src/non_graph_executor/: __init__.py  agent.py
src/pipeline_session/: __init__.py  commands.py  display.py  result.py  session.py  statistics.py
src/plotly_generator/: README.md  __init__.py  plotly_generator_agent.py
src/shared_lib/: __init__.py
streamlit_app/: README.md  __init__.py  close_session_endpoint.py  display_components.py  email_auth.py  pipeline_runner.py  progressive_display.py  session_activity_tracker.py  session_state.py  session_timeout_manager.py
streamlit_app/components/: __init__.py  alias_manager.py  enhanced_close_detector.js  session_monitor.py
streamlit_app/developer_mode/: __init__.py  panel.py
(+254 files in other folders)
