[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_classifier"
version = "0.1.0"
description = "A project that uses LangGraph to classify graphs based on user queries."
requires-python = ">=3.11,<3.13"

# Production dependencies only
dependencies = [
    # LangGraph/LangChain - Core AI framework
    "langgraph==1.0.2",
    "langchain==1.0.3",
    "langchain-core==1.0.2",
    "langchain-openai==1.0.1",
    "langchain-google-genai>=2.1.0,<3.0.0",
    "langgraph-checkpoint==2.1.1",

    # Data processing
    "pyarrow>=21.0.0",
    "pyyaml==6.0.2",
    "rapidfuzz==3.10.1",
    "unidecode==1.3.8",

    # Validation
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",

    # Configuration
    "python-dotenv==1.0.1",

    # Analytics & Data
    "duckdb==1.3.2",
    "pandas>=2.2.0",
    "psutil>=5.9.8",
    "pandera>=0.17.2",
    "tabulate>=0.9.0",

    # Visualization
    "plotly==5.18.0",
    "kaleido==0.2.1",

    # Streamlit App
    "streamlit==1.49.1",

    # Scientific computing
    "scipy==1.10.1",

    # Cloud logging
    "supabase==2.10.0",

    # Console output
    "rich==13.9.4",
]

# Development/testing dependencies (not installed in production)
[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-mock==3.14.0",
    "pytest-benchmark==4.0.0",
    "memory-profiler==0.61.0",
]
 
[tool.setuptools.packages.find]
where = ["src"]